Apply securoty for l5-swagger
